# smolt

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum
cmd/stronglifts/: main.go
internal/auth/: auth.go  auth_test.go  middleware.go  session.go
internal/db/: db.go
internal/handlers/: auth.go  workout.go
internal/templates/: base.html  dashboard.html  login.html  onboarding.html  profile.html  progress_charts.html  register.html  standalone_editor.html  templates.go  workout.html
internal/workout/: models.go  progression.go  workout_test.go
migrations/: 0001_initial.sql
scripts/: setup_service.sh
src/: app.rs  lib.rs  main.rs  models.rs
src/components/: body_metrics.rs  charts.rs  mod.rs  nav.rs  new_workout.rs  workout_detail.rs  workout_list.rs
src/server_fns/: metrics.rs  mod.rs  workouts.rs
style/: main.scss
